...
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal"
                            android:weightSum="13">
                            <RadioButton
                                android:id="@+id/A_plus"
                                android:layout_width="0dp"
                                android:layout_height="43dp"
                                android:button="@null"
                                android:background="@drawable/button_blood_type_selector"
                                android:gravity="center"
                                android:text="@string/a_plus"
...
                                android:id="@+id/space1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible"/>
                            <RadioButton
                                android:id="@+id/B_plus"
                                android:layout_width="0dp"
                                android:layout_height="43dp"
                                android:button="@null"
                                android:background="@drawable/button_blood_type_selector"
                                android:gravity="center"
                                android:text="@string/b_plus"
...
                                android:id="@+id/space2"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible"/>
                            <RadioButton
                                android:id="@+id/AB_plus"
                                android:layout_width="0dp"
                                android:layout_height="43dp"
                                android:button="@null"
                                android:background="@drawable/button_blood_type_selector"
                                android:gravity="center"
                                android:text="@string/ab_plus"
...
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginTop="25dp"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal"
                            android:weightSum="13">
                            <RadioButton
                                android:id="@+id/A_minus"
                                android:layout_width="0dp"
                                android:layout_height="43dp"
                                android:button="@null"
                                android:background="@drawable/button_blood_type_selector"
                                android:gravity="center"
                                android:text="@string/a_minus"
...
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/chooseLocationWord"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/incrementBloodBags"
                        app:layout_constraintStart_toStartOf="@id/bloodTypeWord"
                        android:layout_marginTop="40dp"
                        android:text="@string/donation_location"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp"
                        android:fontFamily="@font/opensans_bold"/>
...
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/iconfinder_nav_arrow_right_383100_grey" />

                        <Spinner
                            android:id="@+id/spinnerGov"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
...
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/iconfinder_nav_arrow_right_383100_grey" />

                        <Spinner
                            android:id="@+id/spinnerCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
...
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/text_blood_type_button"
                        android:enabled="@{viewmodel.canUserRequest}"/>

                    <Button
                        android:id="@+id/decrementBloodBags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/incrementBloodBags"
                        app:layout_constraintHorizontal_bias="0.86"
...
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/text_blood_type_button"
                        android:enabled="@{viewmodel.canUserRequest}"/>

                    <EditText
                        android:id="@+id/bagsNumberEditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/incrementBloodBags"
                        app:layout_constraintBottom_toBottomOf="@id/incrementBloodBags"
                        app:layout_constraintStart_toEndOf="@id/incrementBloodBags"
                        app:layout_constraintEnd_toStartOf="@id/decrementBloodBags"
...
